# pmo

./: Makefile  NOTICE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/application/commands/: mod.rs
backend/src/application/services/: activity_app_service.rs  attachment_app_service.rs  mod.rs  notification_app_service.rs  project_app_service.rs  tag_app_service.rs  task_app_service.rs  team_app_service.rs  time_log_app_service.rs
backend/src/domain/entities/: activity_log.rs  attachment.rs  mod.rs  notification.rs  tag.rs  time_log.rs
backend/src/domain/repositories/: activity_log_repository.rs  attachment_repository.rs  mod.rs  notification_repository.rs  project_repository.rs  tag_repository.rs  task_repository.rs  team_repository.rs  time_log_repository.rs
backend/src/domain/services/: auth_service.rs
backend/src/domain/value_objects/: email.rs  enums.rs
backend/src/infrastructure/persistence/: mod.rs  pg_activity_log_repository.rs  pg_attachment_repository.rs  pg_notification_repository.rs  pg_project_repository.rs  pg_tag_repository.rs  pg_task_repository.rs  pg_team_repository.rs  pg_time_log_repository.rs
backend/src/presentation/handlers/: activity_handler.rs  attachment_handler.rs  mod.rs  notification_handler.rs  project_handler.rs  tag_handler.rs  task_handler.rs  team_handler.rs  time_log_handler.rs
backend/src/shared/error/: mod.rs
database/: schema.sql  seed.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/lib/: api.ts  (+1 more)
(+18 files in other folders)
