[package]
name = "percival-backend"
version = "0.1.0"
edition = "2021"
description = "Percival - Project Management Office Backend API"
authors = ["okinn"]

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
governor = "0.10"
tower_governor = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

# Pin crates that require edition2024 to versions compatible with stable Rust
[dependencies.home]
version = "=0.5.11"

[dependencies.base64ct]
version = "=1.7.3"